# PlatformerGame

./: .gitignore  CLAUDE.md  CMakeLists.txt  CODE_REVIEW.md  DOCUMENTATION.md  README.md
assets/backgrounds/: README.md
assets/levels/: level1.json  level2.json  zone1_boss.json  zone1_level1.json  zone1_level2.json  zone1_level2_REFERENCE.md  zone1_level3.json  zone1_secret.json  zone2_east.json  zone2_hub.json  zone2_north.json  zone2_south.json  zone2_west.json
assets/palettes/: lyra_palette.ase  zone1_palette.ase  zone1_palette.gpl
assets/sprites/: README.md  lyra.ase  silouhette.ase
assets/sprites/lyra_pixellab/: metadata.json
assets/sprites/noah_pixellab/: metadata.json
assets/tilesets/: README.md  zone1_endfloor.ase  zone1_floor.ase
include/audio/: AudioManager.h
include/core/: Config.h  Game.h  GameState.h  InputConfig.h  Logger.h  SaveSystem.h
include/editor/: EditorController.h
include/effects/: CameraShake.h  Particle.h  ParticleSystem.h  ScreenTransition.h
include/entities/: Enemy.h  EnemyProjectile.h  EnemyStatsPresets.h  Entity.h  FlameTrap.h  FlyingEnemy.h  KineticWaveProjectile.h  PatrolEnemy.h  Player.h  RotatingTrap.h  Spike.h
include/graphics/: AnimatedSprite.h  ParallaxLayer.h  SpriteManager.h  Tileset.h
include/physics/: CollisionSystem.h  PhysicsConstants.h
include/systems/: CheckpointManager.h  PortalSpawner.h  SaveManager.h
include/ui/: GameUI.h  KeyBindingMenu.h  Menu.h  PauseMenu.h  SettingsMenu.h  TitleScreen.h
include/world/: Camera.h  Checkpoint.h  GoalZone.h  InteractiveObject.h  LevelLoader.h  Platform.h
src/audio/: AudioManager.cpp
src/core/: Game.cpp  Game_new.cpp  InputConfig.cpp  Logger.cpp  SaveSystem.cpp  main.cpp
src/editor/: EditorController.cpp
src/effects/: CameraShake.cpp  ParticleSystem.cpp  ScreenTransition.cpp
src/entities/: Enemy.cpp  EnemyProjectile.cpp  Entity.cpp  FlameTrap.cpp  FlyingEnemy.cpp  KineticWaveProjectile.cpp  PatrolEnemy.cpp  Player.cpp  RotatingTrap.cpp  Spike.cpp
src/graphics/: AnimatedSprite.cpp  ParallaxLayer.cpp  SpriteManager.cpp  Tileset.cpp
src/physics/: CollisionSystem.cpp
src/systems/: CheckpointManager.cpp  PortalSpawner.cpp  SaveManager.cpp
src/ui/: GameUI.cpp  KeyBindingMenu.cpp  Menu.cpp  PauseMenu.cpp  SettingsMenu.cpp  TitleScreen.cpp
src/world/: Camera.cpp  Checkpoint.cpp  GoalZone.cpp  InteractiveObject.cpp  LevelLoader.cpp  Platform.cpp
tools/: README_PIXELLAB.md
